# parse-git-log-action

./: .bumpversion.cfg  .editorconfig  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  Makefile  Pipfile  README.md  SECURITY.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  gh-pages.yml  links-fail-fast.yml  linter.yml  parse-git-log-action.yml  pre-commit.yml  ruff.yml
app/: __main__.py  __version__.py  app.py  parser.py  utils.py
app/config/: config.yaml
docs/: requirements.txt
docs/source/: CONTRIBUTE.md  conf.py  installation.rst  usage.rst
docs/source/install/: README.md  on_cluster.rst  tested_systems.rst
docs/source/templates/: package.rst_t
